Added detection of PyQt5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -613,10 +613,13 @@ IF   ( NOT DEFINED MATPLOTLIB_ROOT_DIR )
     set(MATPLOTLIB_ROOT_DIR $ENV{MATPLOTLIB_ROOT_DIR} )
 ENDIF( NOT DEFINED MATPLOTLIB_ROOT_DIR )
 
-#PyQt5 root dir
-IF   ( NOT DEFINED PYQT5_ROOT_DIR )
+#For GUI : PyQt5 root dir
+if   ( SOLVERLAB_WITH_GUI OR COREFLOWS_WITH_GUI )
+  IF   ( NOT DEFINED PYQT5_ROOT_DIR )
     set(PYQT5_ROOT_DIR $ENV{PYQT5_ROOT_DIR} )
-ENDIF( NOT DEFINED PYQT5_ROOT_DIR )
+  ENDIF( NOT DEFINED PYQT5_ROOT_DIR )
+  find_package(PyQt5)
+endif   ( SOLVERLAB_WITH_GUI OR COREFLOWS_WITH_GUI )
 
 #Paraview library paths
 set (PV_LIB_DIR    /usr/lib/python${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}/dist-packages/paraview/:/usr/lib64/python${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}/site-packages/vtk/:${MATPLOTLIB_ROOT_DIR}/lib/:${PARAVIEW_LIBRARIES_DIR})
