Changed default values of CoreFlows CACHE variable

--- a/CoreFlows/CMakeLists.txt
+++ b/CoreFlows/CMakeLists.txt
@@ -7,12 +7,12 @@ project (CoreFlows C CXX)
 set (COREFLOWS_VERSION_MAJOR 9)
 set (COREFLOWS_VERSION_MINOR 9)
 
-# CDMATH project options (deprecated, see SOLVERLAB options)
-set (COREFLOWS_WITH_DOCUMENTATION ON CACHE STRING "Generate documentation for CoreFlows use")
-set (COREFLOWS_WITH_PYTHON ON CACHE STRING "Compile Python interface for COREFLOWS")
+# Coreflows project options (deprecated, see SOLVERLAB options)
+set (COREFLOWS_WITH_DOCUMENTATION ${SOLVERLAB_WITH_DOCUMENTATION} CACHE STRING "Generate documentation for CoreFlows use")
+set (COREFLOWS_WITH_PYTHON ${SOLVERLAB_WITH_PYTHON} CACHE STRING "Compile Python interface for COREFLOWS")
 set (COREFLOWS_WITH_GUI ${SOLVERLAB_WITH_GUI} CACHE STRING "Compile Graphic user Interface for COREFLOWS")
-set (COREFLOWS_WITH_PACKAGE OFF CACHE STRING "Generate RPM, Debian and tarball packages")
-set (COREFLOWS_WITH_TESTS ON CACHE STRING "Compile with testing and examples")
+set (COREFLOWS_WITH_PACKAGE ${SOLVERLAB_WITH_PACKAGE} CACHE STRING "Generate RPM, Debian and tarball packages")
+set (COREFLOWS_WITH_TESTS ${SOLVERLAB_WITH_TESTS} CACHE STRING "Compile with testing and examples")
 
 # Debug mode activates testing and profiling --------------------------------------------------------------#
 if   (CMAKE_BUILD_TYPE STREQUAL Debug)									   #
