Changed install directory for Wambeke images scripts and readme files

--- a/READMES/CMakeLists.txt
+++ b/READMES/CMakeLists.txt
@@ -5,4 +5,4 @@ file(GLOB MY_FILES
   "./*.md"
 )
 file(COPY ${MY_FILES} DESTINATION .) # BUILD
-file(COPY ${MY_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/READMES) # INSTALL
+file(COPY ${MY_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/READMES) # INSTALL
