--- a/images/CMakeLists.txt
+++ b/images/CMakeLists.txt
@@ -5,4 +5,4 @@ file(GLOB MY_FILES
   "./*.png"
 )
 file(COPY ${MY_FILES} DESTINATION .) # BUILD
-file(COPY ${MY_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/images) # INSTALL
+file(COPY ${MY_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/images) # INSTALL
