--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -5,4 +5,4 @@ file(GLOB MY_FILES
   "./*.sh"
 )
 file(COPY ${MY_FILES} DESTINATION .) # BUILD
-file(COPY ${MY_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/scripts) # INSTALL
+file(COPY ${MY_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/scripts) # INSTALL
