Added make target for python tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -714,8 +714,9 @@ if (SOLVERLAB_WITH_TESTS)                                                       
  ENDIF( DEFINED CPPUNIT_ROOT_DIR OR DEFINED ENV{CPPUNIT_ROOT_DIR})
   find_package (CPPUNIT REQUIRED)
 
-  add_custom_target (cpp COMMAND ctest -R .exe)# may be replace ctest -R with ctest -L
-  add_custom_target (mpi COMMAND ctest -R Proc)# may be replace ctest -R with ctest -L
+  add_custom_target (cpp    COMMAND ctest -R .exe)# may be replace ctest -R with ctest -L
+  add_custom_target (python COMMAND ctest -R .py)# may be replace ctest -R with ctest -L
+  add_custom_target (mpi    COMMAND ctest -R Proc)# may be replace ctest -R with ctest -L
 endif(SOLVERLAB_WITH_TESTS)
 
 # Enter subdirectories
